# daily_news_by_AI

./: .gitignore  ARCH_CONTEXT.md  README.md  alembic.ini  goal.md  pyproject.toml  want_to_add.md
alembic/: env.py
alembic/versions/: 20260427_ai_provider_configs.py  20260427_ask_history_records.py
docs/: api_spec.md  application_pipeline_verification.md  application_url_batch_workflow.md  architecture.md  ask_result_display_optimization.md  local_data_maintenance.md  project_overview.md  review_implementation.md  roadmap.md  task_breakdown.md  task_cards.md  testing_strategy.md  user_trial_guide.md  web_browser_smoke_checklist.md  web_dashboard_documents_contract.md  web_i18n_task.md  web_local_storage_boundary.md  web_mvp_acceptance_checklist.md  web_mvp_trial_report.md  web_page_contract.md
scripts/: cleanup_test_documents.py  demo_review_integration.py  run_application_batch.py  sample_application_batch_input.json  sample_application_url_list.json  sample_application_url_list.txt  verify_api.py  verify_application_api.py  verify_application_batch.py  verify_application_flow.py  verify_application_persistence_db.py  verify_application_url_import.py  verify_application_url_list_import.py  verify_ingestion.py  verify_models.py  verify_pipeline.py  verify_review.py  verify_watchlist.py
src/: __init__.py  config.py
src/admin/: __init__.py  (+3 more)
tests/: test_cleanup_test_documents.py  test_web_ask.py  test_web_dashboard_documents.py  test_web_document_management.py  test_web_i18n.py  test_web_import.py  test_web_mvp_acceptance.py  test_web_review_opportunities.py
(+67 files in other folders)
